# crossword-gui

./: .gitignore  02-15-18-22-04-2022.txt  CMakeLists.txt  Doxyfile  LICENSE  README.md
cmake/: FindCairo.cmake
crossword-gui/: CMakeLists.txt
crossword-lib/: CMakeLists.txt
crossword-lib/include/: action.hpp  cell.hpp  crossword.hpp  lib.hpp
crossword-lib/src/: cell.cpp  crossword.cpp  lib.cpp
gui/: CMakeLists.txt
gui/src/: main.cpp
resources/: database.csv  mini.crossword  test1.crossword
src/crossword/: base.hpp  cell.cpp  clue.cpp  clue.hpp  crossword.cpp  crossword.hpp  crossword_action.cpp  crossword_action.hpp  crossword_serialization.cpp  database.cpp  database.hpp  logging.cpp  logging.hpp  search.cpp  search.hpp  trie.cpp  word.cpp  word.hpp
src/widgets/: cell_renderer.cpp  dialog.cpp  dialog.hpp  drawing.cpp  event_handlers.cpp  grid.cpp  icon.xpm  main_entry.cpp  main_window.cpp  main_window.hpp
tests/: CMakeLists.txt  testlib.cpp
